package ingsoftware.service.post_completion;

import ingsoftware.model.Badge;
import ingsoftware.model.DTO.CompletionResultDTO;
import org.springframework.stereotype.Service;

import java.util.List;

@Service
public class AchievementService {
    public List<Badge> checkForNewBadges(CompletionResultDTO completion) {return null;}
}
