package ingsoftware.service.post_completion;

import ingsoftware.model.DTO.CompletionResultDTO;
import org.springframework.stereotype.Service;


@Service
public class AnalyticsLoggerService {
    public void logEvent(String habitCompleted, CompletionResultDTO completion) {}
}
